--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,6 +4,7 @@
         <script src="./js/compiled/hyjinks_react.js"></script>
     </head>
     <body>
-        <div id="content"></div>
+        <div id="react-content"></div>
+        <div id="dom-content"></div>
     </body>
 </html>
