Got cljs unit tests set up

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>Hyjinks/React Test Page</title>
-        <script src="./js/compiled/hyjinks_react.js"></script>
+        <title>Hyjinks Test Page</title>
+        <script src="./js/compiled/hyjinks_browser.js"></script>
     </head>
     <body>
-        <div id="react-content"></div>
-        <div id="dom-content"></div>
+        <div style="font-size: 30px; font-weight: bold" id="results"></div>
+        <div>Look at console for detailed results.</div>
     </body>
 </html>
