--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Hyjinks Test Page</title>
-        <script src="./js/compiled/hyjinks_browser.js"></script>
+        <script src="js/compiled/hyjinks_browser.js"></script>
     </head>
     <body>
         <div style="font-size: 30px; font-weight: bold" id="results"></div>
